<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="out_of_results">No more results</string>
    <string name="app_name">UberImageSearcher</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Filter Settings</string>
    <string name="search_hint">Enter Search Item</string>
    <string name="search_button">Search</string>
    <string name="save_button">Save</string>
    <string name="share_button">Share this image</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_filter">Filters</string>
    <string name="search_options">Advanced Search Options</string>
    <string name="image_size">Image Size</string>
    <string name="color">Color</string>
    <string name="image_type">Image Type</string>
    <string name="site_filter">Site Filter</string>

    <string-array name="colors">
        <item>any</item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>
    <string-array name="type">
        <item>any</item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>
    <string-array name="size">
        <item>any</item>
        <item>icon</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xxlarge</item>
        <item>huge</item>
    </string-array>

    <string name="title_activity_poi_detail">PoiDetailActivity</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="previous">previous searches</string>

</resources>
